--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
+html,
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#root {
+  overflow: hidden;
+}
+
+:root {
+  --scrollbar-bg-color: #222222;
+  --scrollbar-thumb-color: #747474;
+  --scrollbar-width: 8px;
+}
+
+* {
+  scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-bg-color);
+  scrollbar-width: thin;
+}
+
+/* Scrollbar settings */
+
+*::-webkit-scrollbar {
+  height: var(--scrollbar-width);
+  width: var(--scrollbar-width);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-thumb-color);
+  border-radius: 6px;
+  transition: background-color linear 0.1s;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--scrollbar-bg-color);
+  border-radius: 6px;
 }
